# RJira

./: Cargo.toml  README.md
data/: db.json
src/: db.rs  io_utils.rs  main.rs  models.rs  navigator.rs
src/ui/: mod.rs  prompts.rs
src/ui/pages/: mod.rs  page_helpers.rs
