[package]
name = "rjira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
ellipse = "0.2.0"
itertools = "0.13.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
tempfile = "3.10.1"
